Fix: UI jumping on re-renders due to state changing but select options not.

--- a/src/styles/new-dog-form.module.scss
+++ b/src/styles/new-dog-form.module.scss
@@ -122,6 +122,7 @@
   align-items: center;
   width: fit-content;
   select {
+    font-size: Theme.$h3;
     width: fit-content;
   }
 }
